--- a/public/assets/css/chat.css
+++ b/public/assets/css/chat.css
@@ -8,6 +8,11 @@ body {
   font-family: "Calibri", "Roboto", sans-serif;
 }
 
+html {
+  height:100%;
+  background: linear-gradient(0deg, #dbdbdb, #416b92 55%) no-repeat;
+}
+
 .chat_window {
   margin-top: 200px;
   position: absolute;
@@ -50,7 +55,7 @@ body {
   background-color: #f80202;
 }
 
-.top_menu .title {
+.top_menu .mainTitle {
   text-align: center;
   color: #bcbdc0;
   font-size: 28px;
@@ -216,23 +221,40 @@ body {
   display: none;
 }
 
+.menu-items {
+  border-bottom: 1px solid #dddde2;
+  padding: 10px;
+}
+
+
+#sidebar {
+  color: black;
+  background-color: yellow;
+}
 
 
 
 
-
-
-
-
-
+.sidebar-header {
+  font-family: 'Kaushan Script', cursive;
+  background: #fff;
+  border-bottom: 1px solid #dddde2;
+  padding: 10px 0 10px 15px;
+}
 
 h3 {
-  font-family: 'Kaushan Script', cursive;
+  margin-left: 25%;
 }
 
 .li {
   font-family: 'Kaushan Script', cursive;
 }
+
+.menu-li {
+  padding: 5px;
+  margin-left: 10px;
+}
+
 
 
 
@@ -242,6 +264,7 @@ h3 {
   height: 40px;
   background: #fff;
 }
+
 
 #sidebarCollapse span {
   width: 80%;
@@ -286,9 +309,9 @@ h3 {
 #sidebar {
   min-width: 250px;
   max-width: 250px;
-  background: #fff;
+  background: #f8f8f8;
   color: black;
-  height: 650px;
+  height: 100vh;
   transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
   transform-origin: center left; /* Set the transformed position of sidebar to center left side. */
 }
@@ -339,6 +362,18 @@ h3 {
   #sidebarCollapse.active span:last-of-type {
       transform: rotate(-45deg) translate(1px, -1px);
   }
+}
+
+
+footer {
+    text-align: center;
+    font-size: .8em;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding-top:10px;
+    padding-bottom:10px;
+    
 }
 
 
